--- a/apps/templates/home/order_requests.html
+++ b/apps/templates/home/order_requests.html
@@ -7,7 +7,6 @@
 
 {% block content %}
 
-
   <div class="container-fluid py-4">
 
     <div class="row" dir="rtl">
@@ -61,8 +60,10 @@
                         <span class="badge badge-sm bg-gradient-danger"> لغو شده </span>
                       {% elif Order_request.status == 'دریافت پیش پرداخت' %}
                         <span class="badge badge-sm bg-gradient-info"> دریافت پیش پرداخت </span>
+                        {% elif Order_request.status == 'جدید' %}
+                          <span class="badge badge-sm bg-gradient-warning"> جدید </span>
                       {% else %}
-                        <span class="badge badge-sm bg-gradient-warning"> در حال بررسی </span>
+                        <span class="badge badge-sm bg-gradient-secondary"> در حال بررسی </span>
                       {% endif %}
                     </td>
 
@@ -75,7 +76,7 @@
                     </td>
 
                     <td class="align-middle text-center">
-                      <p class="text-xs text-secondary mb-0"> {{ Order_request.date_created }} </p>
+                      <p class="text-xs text-secondary mb-0"> {{ Order_request.date_created|date:'H:i  Y-m-d' }} </p>
                     </td>
 
                   </tr>
@@ -92,6 +93,7 @@
 
 
 
+
     {% include "includes/footer.html" %}
 
   </div>
@@ -99,16 +101,4 @@
 {% endblock content %}
 
 <!-- Specific JS goes HERE -->
-{% block javascripts %}
-
-  <script>
-    var win = navigator.platform.indexOf('Win') > -1;
-    if (win && document.querySelector('#sidenav-scrollbar')) {
-      var options = {
-        damping: '0.5'
-      }
-      Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
-    }
-  </script>
-
-{% endblock javascripts %}
+{% block javascripts %} {% endblock javascripts %}
