--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -98,7 +98,7 @@
 
 
         <li class="nav-item mb-1">
-          <a class="nav-link {% if request.path == '/order_requests' %} active {% endif %}" href="{% url 'order_requests' %}">
+          <a class="nav-link {% if request.path == '/reg_req' %} active {% endif %}" href="{% url 'order_requests' %}">
             <div class="icon icon-shape icon-xs shadow border-radius-sm bg-gradient-light text-center me-2 d-flex align-items-center justify-content-center">
               <img src="/static/assets/img/reqreg.png" width="24px">
             </div>
@@ -113,7 +113,7 @@
 
 
         <li class="nav-item mb-1">
-          <a class="nav-link {% if request.path == '/logout' %} active {% endif %}" href="{% url 'logout' %}">
+          <a class="nav-link {% if request.path == '/etc' %} active {% endif %}" href="{% url 'etc' %}">
             <div class="icon icon-shape icon-xs shadow border-radius-sm bg-gradient-light text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>etc</title>
