--- a/apps/templates/home/customer_detail.html
+++ b/apps/templates/home/customer_detail.html
@@ -99,14 +99,21 @@
                           <div class="d-flex flex-column justify-content-center">
                             <a href="{{ Order_request.get_absolute_url }}">
                               <h6 class="mb-0 text-sm">
-                                <img src="/static/assets/img/user.png" class="avatar avatar-sm me-3">
+                                {% if Order_request.customer.substantial %}
+                                  <img src="/static/assets/img/golduser.png" class="avatar avatar-sm me-3">
+                                {% else %}
+                                  <img src="/static/assets/img/user.png" class="avatar avatar-sm me-3">
+                                {% endif %}
                              </h6>
                            </a>
                           </div>
                         </div>
                       </td>
                       <td class="align-middle text-center text-sm">
-                        <p class="text-xs text-secondary mb-0"> <img src="{{ Order_request.product.image.url }}" class="avatar avatar-sm me-3"> {{ Order_request.product.name }} </p>
+                        <p class="text-xs text-secondary mb-0">
+                          <img src="{{ Order_request.product.image.url }}" class="avatar avatar-sm me-3">
+                          {{ Order_request.product.name }}
+                        </p>
                       </td>
                       <td class="align-middle text-center">
                         <p class="text-xs text-secondary mb-0"> {{ Order_request.qty }} عدد </p>
