--- a/apps/templates/home/order_req_detail.html
+++ b/apps/templates/home/order_req_detail.html
@@ -7,6 +7,119 @@
 
 {% block content %}
 
+
+<br>
+
+<div class="container-fluid py-4">
+
+  <div class="row">
+    <div class="col-lg-12 mb-lg-0 mb-4">
+      <div class="card">
+        <div class="card-body p-3">
+          <div class="row">
+            <div class="col-lg-9">
+              <div class="d-flex flex-column h-100">
+                <p class="text-lg mb-1 pt-2 text-bold"> <i class="far fa-calendar-alt me-2"></i> <small> {{ req.date_created|date:'H:i  Y-m-d' }} </small> </p>
+                <h3 dir="rtl" class="font-weight-bolder"> {{ req }} </h3>
+                <p dir="rtl" class="mb-5"> {{ req.description }} </p>
+              </div>
+            </div>
+            <div class="col-lg-3 ms-auto text-center mt-5 mt-lg-0">
+                <img src="/static/assets/img/shapes/waves-white.svg" class="position-absolute h-100 w-50 top-0 d-lg-block d-none" alt="waves">
+                <div class="position-relative d-flex align-items-center justify-content-center h-100">
+                  <img class="w-100 position-relative z-index-2 pt-4" src="{{ req.product.image.url }}">
+                </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12">
+
+
+
+              <div class="table-responsive p-0" dir="rtl">
+                <table class="table align-items-center mb-0">
+                  <thead>
+                    <tr>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> نام مشتری </th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> محصول </th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> تعداد </th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> وضعیت </th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> کارشناس فروش </th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> درصد تخفیف </th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> تاریخ </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        <div class="d-flex px-2 py-1">
+                          <div class="d-flex flex-column justify-content-center">
+                            <a href="{{ Order_request.get_absolute_url }}">
+                              <h6 class="mb-0 text-sm">
+                                {% if req.customer.substantial %}
+                                  <img src="/static/assets/img/golduser.png" class="avatar avatar-sm me-3">
+                                {% else %}
+                                  <img src="/static/assets/img/user.png" class="avatar avatar-sm me-3">
+                                {% endif %}
+                                {{ req.customer.name }}
+                             </h6>
+                           </a>
+                          </div>
+                        </div>
+                      </td>
+                      <td class="align-middle text-center text-sm">
+                        <p class="text-xs text-secondary mb-0"> <img src="{{ Order_request.product.image.url }}" class="avatar avatar-sm me-3"> {{ Order_request.product.name }} </p>
+                      </td>
+                      <td class="align-middle text-center">
+                        <p class="text-xs text-secondary mb-0"> {{ Order_request.qty }} عدد </p>
+                      </td>
+                      <td class="align-middle text-center">
+                        {% if Order_request.status == 'تکمیل شده' %}
+                          <span class="badge badge-sm bg-gradient-success"> تکمیل شده </span>
+                        {% elif Order_request.status == 'لغو شده' %}
+                          <span class="badge badge-sm bg-gradient-danger"> لغو شده </span>
+                        {% elif Order_request.status == 'دریافت پیش پرداخت' %}
+                          <span class="badge badge-sm bg-gradient-info"> دریافت پیش پرداخت </span>
+                          {% elif Order_request.status == 'جدید' %}
+                            <span class="badge badge-sm bg-gradient-warning"> جدید </span>
+                        {% else %}
+                          <span class="badge badge-sm bg-gradient-secondary"> در حال بررسی </span>
+                        {% endif %}
+                      </td>
+                      <td class="align-middle text-center">
+                        <p class="text-xs text-secondary mb-0"> {{ Order_request.user }} </p>
+                      </td>
+                      <td class="align-middle text-center">
+                        <p class="text-xs text-secondary mb-0"> {{ Order_request.discount }} ٪ </p>
+                      </td>
+                      <td class="align-middle text-center">
+                        <p class="text-xs text-secondary mb-0"> {{ Order_request.date_created|date:'H:i  Y-m-d' }} </p>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+
+
+               <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
+                 Read More
+                 <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
+               </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
+
+
+
+<br><br><br><br>
+
     <div class="container-fluid py-4">
 
       <div class="row">
@@ -80,7 +193,7 @@
                             {{ Order_steps.description }}
                           </p>
                           <hr>
-                          <p class="text-left text-white"> <i class="far fa-calendar-alt me-2"></i> {{ Order_steps.date_created }}</p>
+                          <p class="text-left text-white"> <i class="far fa-calendar-alt me-2"></i> {{ Order_steps.date_created|date:'H:i  Y-m-d'  }}</p>
                         </div>
                       </div>
                     </div>
