selectpicker bootstrap336.min changes

--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -98,7 +98,7 @@
 
 
         <li class="nav-item mb-1">
-          <a class="nav-link {% if request.path == '/reg_req' %} active {% endif %}" href="{% url 'order_requests' %}">
+          <a class="nav-link {% if request.path == '/order_registration' %} active {% endif %}" href="{% url 'order_registration' %}">
             <div class="icon icon-shape icon-xs shadow border-radius-sm bg-gradient-light text-center me-2 d-flex align-items-center justify-content-center">
               <img src="/static/assets/img/reqreg.png" width="24px">
             </div>
