--- a/apps/templates/home/order_registration.html
+++ b/apps/templates/home/order_registration.html
@@ -10,103 +10,96 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css" rel="stylesheet" />
     <link href="/static/assets/css/bootstrap336.min.css" rel="stylesheet" />
+
 {% endblock stylesheets %}
 
 {% block content %}
 
 
 
-  <div class="container-fluid py-4">
 
-    <div class="row" dir="rtl">
-      <div class="col-12">
-        <div class="card mb-4">
-          <div class="card-header pb-0">
-            <h6>  ثبت سفارش  </h6>
-          </div>
+<div class="container-fluid py-4">
 
-          <div class="card-body px-0 pt-0 pb-2">
-
-
-               <h1> reg...</h1> <br><br><br>
-
+  <div class="row" dir="rtl">
+    <div class="col-12">
+      <div class="card mb-4">
+        <div class="card-header pb-0">
+          <h6>  ثبت سفارش  </h6> <p class="text-xs text-secondary mb-0"> ثبت سفارش جدید </p> <hr>
+        </div>
+        <div class="card-body px-7 pt-4 pb-2">
 
                <form action="#" method="post" dir="rtl" align="right">
                  {% csrf_token %}
-
-
                  <div class="row">
+
                    <div class="col-md-4 pr-md-4">
                      <div class="form-group">
-                       <label><p>خریدار </p></label>
-                       <select name="buyer" class="form-control selectpicker" data-live-search="true">
+                       <label><p class="text-xs text-secondary mb-0"> خریدار </p></label>
+                       <select name="customer" class="form-control selectpicker" data-live-search="true">
                          {% for Customer in customers %}
                            <option data-tokens="{{Customer.name}}" value={{Customer.id}}>{{Customer.name}}</option>
                          {% endfor %}
                        </select>
                      </div>
                    </div>
+
+                   <div class="col-md-4 pr-md-4">
+                     <div class="form-group">
+                     <label><p class="text-xs text-secondary mb-0"> محصول </p></label>
+                      <select name="product" class="form-control selectpicker" data-live-search="true">
+                        {% for Product in products %}
+                         <option data-tokens="{{Product.name}}" value={{Product.id}}>{{Product.name}}</option>
+                        {% endfor %}
+                      </select>
+                    </div>
+                  </div>
+
+                  <div class="col-md-2 pr-md-4">
+                    <div class="form-group">
+                      <label><p class="text-xs text-secondary mb-0"> تعداد </p></label>
+                      <input name="qty" type="number" value="1" class="form-control">
+                    </div>
+                  </div>
+
                    <div class="col-md-2 pl-md-4">
                      <div class="form-group">
-                       <label><p> درصد تخفیف </p></label>
-                       <input name="discount" type="number" class="form-control">
+                       <label><p class="text-xs text-secondary mb-0"> درصد تخفیف </p></label>
+                       <input name="discount" type="number" value="0" class="form-control">
                      </div>
                    </div>
+
                  </div>
 
-
                  <div class="row">
-                   <div class="col-md-10 pr-md-4">
+                   <div class="col-md-12 pr-md-4">
                      <div class="form-group">
-                       <label><p> توضیحات </p></label>
+                       <label><p class="text-xs text-secondary mb-0"> توضیحات </p></label>
                        <input name="description" type="text" class="form-control">
                      </div>
                    </div>
                  </div>
 
 
-
-                 <div class="row">
-                   <div class="col-md-4 pr-md-4">
-                     <div class="form-group">
-                     <label><p> محصول </p></label>
-                     <select name="product-0" id="0" class="form-control selectpicker" data-live-search="true">
-                       {% for Product in products %}
-                         <option data-tokens="{{Product.name}}" value={{Product.id}}>{{Product.name}}</option>
-                       {% endfor %}
-                     </select>
-                    </div>
-                  </div>
-                  <div class="col-md-4 pr-md-4">
-                    <div class="form-group">
-                      <label><p> تعداد </p></label>
-                      <input name="qty-0" type="number" class="form-control">
-                    </div>
-                  </div>
-                </div>
-
-
                  <div class="card-footer" align="center">
-                   <button type="submit" class="btn btn-fill btn-primary"> ذخیره </button>
+                   <button type="submit" class="btn bg-gradient-info my-1 me-1"> ثبت </button>
+                   <p style="color:green;"> {{ success }} </p>
                  </div>
 
               </form>
 
-
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
+         </div>
+       </div>
+     </div>
+   </div>
 
 
 
 
     {% include "includes/footer.html" %}
 
-  </div>
+
+</div>
+
 
 {% endblock content %}
 
