--- a/apps/templates/home/customer_detail.html
+++ b/apps/templates/home/customer_detail.html
@@ -51,7 +51,7 @@
                   <p> {{ customer.address }} </p>
                 </td>
                 <td class="align-middle text-center">
-                  <p> {{ customer.additional_information }} </p>
+                  <p> {{ customer.additional_information|linebreaks }} </p>
                 </td>
                 <td class="align-middle text-center">
                   <div class="avatar-group text-center mt-2">
