--- a/apps/templates/home/product_detail.html
+++ b/apps/templates/home/product_detail.html
@@ -18,7 +18,7 @@
                  <div class="d-flex flex-column h-100">
                    <p class="text-lg mb-1 pt-2"><small> محصول </small></p>
                    <h4 class="font-weight-bolder"> {{ product.name }}  </h4>
-                   <p class="mb-5"> {{ product.description }} </p>
+                   <p class="mb-5"> {{ product.description|linebreaks }} </p>
                    <h5 class="font-weight-bolder"> قیمت: {{ product.price }}  ریال </h5>
                    <br>
                    {% if product.available %}
