--- a/apps/templates/home/order_req_detail.html
+++ b/apps/templates/home/order_req_detail.html
@@ -3,9 +3,12 @@
 {% block title %} {{ req }} {% endblock title %}
 
 <!-- Specific CSS goes HERE -->
-{% block stylesheets %}{% endblock stylesheets %}
+{% block stylesheets %}
+  <link rel="stylesheet" href="/static/admin/jquery.ui.datepicker.jalali/themes/base/jquery-ui.min.css">
+{% endblock stylesheets %}
 
 {% block content %}
+{% load jalali_tags %}
 
 
 <br>
@@ -130,35 +133,51 @@
           </div>
           <div class="card-body p-3">
             <div class="row">
-             {% for Order_incomings in incomings %}
-              <div class="col-xl-3 col-md-6 mb-xl-0 mb-4">
-                <div class="card card-blog card-plain">
-                  <div class="card bg-transparent shadow-xl">
-                    <div class="overflow-hidden position-relative border-radius-xl" style="background-image: url('/static/assets/img/curved-images/curved14.jpg');">
-                      <span class="mask bg-gradient-dark"></span>
-                      <div class="card-body position-relative z-index-1 p-3">
-                        <h5 class="text-white text-right"> <i class="fa fa-check text-info" aria-hidden="true"></i> گام {{ Order_incomings.step }} </h5>
-                        <div class="card-body px-1 pb-0">
-                          <p class="mb-4 text-sm text-white">
-                            {{ Order_incomings.description }} 
-                          </p>
-                          <hr>
-                          <p class="text-left text-white"> <i class="far fa-calendar-alt me-2"></i> {{ Order_incomings.date_created|date:'H:i  Y-m-d'  }}</p>
-                        </div>
-                      </div>
+
+              {% for Order_incomings in incomings %}
+                <div class="col-xl-3 col-md-6 mb-xl-0 mb-4">
+                  <div class="card h-100 card-plain border">
+                    <div class="card-body d-flex flex-column justify-content-center text-center">
+                      <button class="btn btn-icon-only btn-rounded btn-outline-success btn-sm d-flex align-items-center justify-content-center"><i class="fas fa-arrow-down" aria-hidden="true"></i></button>
+                      <h5 class=" text-secondary"> {{ Order_incomings.amount }} ریال </h5>
+                      <p class="text-lg mb-1 pt-2 text-bold" dir="ltr"> <i class="far fa-calendar-alt me-2"></i> <small> {{ Order_incomings.date_created|date:'H:i  Y-m-d' }} </small> </p>
                     </div>
                   </div>
                 </div>
-              </div>
-              {% endfor %}
+               {% endfor %}
 
               <div class="col-xl-3 col-md-6 mb-xl-0 mb-4">
                 <div class="card h-100 card-plain border">
                   <div class="card-body d-flex flex-column justify-content-center text-center">
-                    <a href="javascript:;">
-                      <i class="fa fa-plus text-secondary mb-3"></i>
-                      <h5 class=" text-secondary"> افزودن یک گام جدید </h5>
-                    </a>
+
+                      <button class="btn btn-icon-only btn-rounded btn-outline-success btn-sm d-flex align-items-center justify-content-center"><i class="fa fa-plus text-info" aria-hidden="true"></i></button>
+
+                      <form action="#" method="post" dir="rtl" align="right">
+                        {% csrf_token %}
+                        <div class="row">
+
+                          <div class="col-md-10 pr-md-2">
+                            <div class="form-group">
+                              <input name="amount" type="number" placeholder="مبلغ..." class="form-control">
+                            </div>
+                          </div>
+                          <div class="col-md-2">
+                            <div class="form-group">
+                              {{ timeform }}
+                            </div>
+                          </div>
+
+
+
+
+                        </div>
+
+                        <div align="center">
+                          <button type="submit" class="btn bg-gradient-info my-1 me-1"> ثبت </button>
+                        </div>
+
+                      </form>
+
                   </div>
                 </div>
               </div>
@@ -183,4 +202,6 @@
 
 
 <!-- Specific JS goes HERE -->
-{% block javascripts %} {% endblock javascripts %}
+{% block javascripts %}
+<script src="/static/admin/js/django_jalali.min.js"></script>
+{% endblock javascripts %}
