--- a/apps/templates/home/order_req_detail.html
+++ b/apps/templates/home/order_req_detail.html
@@ -140,7 +140,7 @@
                     <div class="card-body d-flex flex-column justify-content-center text-center">
                       <button class="btn btn-icon-only btn-rounded btn-outline-success btn-sm d-flex align-items-center justify-content-center"><i class="fas fa-arrow-down" aria-hidden="true"></i></button>
                       <h5 class=" text-secondary"> {{ Order_incomings.amount }} ریال </h5>
-                      <p class="text-lg mb-1 pt-2 text-bold" dir="ltr"> <i class="far fa-calendar-alt me-2"></i> <small> {{ Order_incomings.date_created|date:'H:i  Y-m-d' }} </small> </p>
+                      <p class="text-lg mb-1 pt-2 text-bold" dir="ltr"> <i class="far fa-calendar-alt me-2"></i> <small> {{ Order_incomings.date_created|date:'Y-m-d' }} </small> </p>
                     </div>
                   </div>
                 </div>
